# Project_beta

./: Procfile  README.md
WordWiseAI/: __init__.py  app.py  main.py  openai_service.py  pyproject.toml  requirements.txt  routes.py
WordWiseAI/static/css/: custom.css
WordWiseAI/static/js/: main.js
WordWiseAI/templates/: base.html  index.html  result.html
